2007-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py
	  (WMAEncoder.get_pipeline_string):
	  Add drop-probability identity for now to force things to stay in
	  sync.  0.01 % is about 1 buffer every 5 minutes for 48Khz streams.

2007-04-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Get it working again; EOS handling didn't quite work. At all.

2007-04-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/encoders/wmv/wmv.py:
	  Remove incorrect duplicate method (thanks pychecker!)

	* flumotion/component/producers/asfparse.py:
	  Handle EOS correctly.

	* flumotion/component/producers/wms.py:
	  Minor comment updates.

	* misc/pycheckerrc:
	  Raise max returns limit to 11.

2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py:
	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/muxers/asf/asf.py:
	  Encoders can check both offset and timestamp.  Muxer can check
	  timestamp.

2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py:
	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/muxers/asf/asf.py:
	  check for plugins needed.  This needs a recent (0.4.1.1) trunk.

2007-02-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Fix up timestamp parsing; broken by previous commit.

2007-02-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Comment out a number of unused things we read from the bitstream to
	  make pychecker quieter.
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Porter support.
	  Allow specifying port to listen on if not using the porter.

2007-02-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py: